// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRangePicker date-range-picker-utils Gitt at renderCalendarIcon kalles Når den instansieres med onClick method og custom css class Så renderes ikonet riktig 1`] = `
<span>
  <svg
    aria-hidden="true"
    class="hnds-style-icon customClassName"
    data-analyticsid="icon"
    fill="black"
    height="36"
    role="img"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M38.887 16.71H8.6v-6.197h3.862v1.17c0 1.223.994 2.216 2.216 2.216a2.218 2.218 0 002.215-2.215v-1.171h13.582v1.17c0 1.223.994 2.216 2.215 2.216a2.218 2.218 0 002.216-2.215v-1.171h3.982v6.197zM8.6 34.46h30.288V17.974H8.6V34.46zm5.125-26.17a.953.953 0 011.905 0v3.394a.953.953 0 01-1.905 0V8.289zm18.013 0a.953.953 0 011.905 0v3.394a.953.953 0 01-1.905 0V8.289zm3.168.96v-.96a2.218 2.218 0 00-2.216-2.216 2.218 2.218 0 00-2.215 2.215v.96H16.892v-.96a2.218 2.218 0 00-2.215-2.215 2.218 2.218 0 00-2.216 2.215v.96H7.336v26.475h32.815V9.249h-5.246zM27.67 28.292a1.508 1.508 0 100-3.016 1.508 1.508 0 000 3.016z"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderChevronIcon kalles Når den instansieres med "next" direction og custom css class Så renderes ikonet riktig 1`] = `
<span
  class="DayPickerNavigation_rightButton__horizontalDefault customClassName"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="hnds-style-icon "
    data-analyticsid="icon"
    fill="#126F87"
    height="36"
    role="img"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M17.885 32.577l1.779 1.793 10.451-10.371L19.664 13.63l-1.779 1.793 8.644 8.576z"
    />
  </svg>
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderChevronIcon kalles Når den instansieres med "prev" direction og custom css class Så renderes ikonet riktig 1`] = `
<span
  class="DayPickerNavigation_leftButton__horizontalDefault customClassName"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="hnds-style-icon "
    data-analyticsid="icon"
    fill="#126F87"
    height="36"
    role="img"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M30.115 32.577l-1.779 1.793-10.451-10.371L28.336 13.63l1.779 1.793-8.644 8.576z"
    />
  </svg>
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderMonthHeader kalles Når den får datoen 20.10.2015 Så returnerer den en komponent med riktig className og nested dropdowns (som er allerede testet dypere over) 1`] = `
<div
  className="datepicker__month-year-selector"
>
  <select
    aria-label="Velg måned"
    className="datepicker__month-selector"
    onChange={[Function]}
    onKeyDown={[Function]}
    value={9}
  >
    <option
      value={0}
    >
      januar
    </option>
    <option
      value={1}
    >
      februar
    </option>
    <option
      value={2}
    >
      mars
    </option>
    <option
      value={3}
    >
      april
    </option>
    <option
      value={4}
    >
      mai
    </option>
    <option
      value={5}
    >
      juni
    </option>
    <option
      value={6}
    >
      juli
    </option>
    <option
      value={7}
    >
      august
    </option>
    <option
      value={8}
    >
      september
    </option>
    <option
      value={9}
    >
      oktober
    </option>
    <option
      value={10}
    >
      november
    </option>
    <option
      value={11}
    >
      desember
    </option>
  </select>
  <select
    aria-label="Velg år"
    className="datepicker__year-selector"
    onChange={[Function]}
    onKeyDown={[Function]}
    value={2015}
  >
    <option
      value={2010}
    >
      2010
    </option>
    <option
      value={2011}
    >
      2011
    </option>
    <option
      value={2012}
    >
      2012
    </option>
    <option
      value={2013}
    >
      2013
    </option>
    <option
      value={2014}
    >
      2014
    </option>
    <option
      value={2015}
    >
      2015
    </option>
    <option
      value={2016}
    >
      2016
    </option>
    <option
      value={2017}
    >
      2017
    </option>
    <option
      value={2018}
    >
      2018
    </option>
    <option
      value={2019}
    >
      2019
    </option>
    <option
      value={2020}
    >
      2020
    </option>
  </select>
</div>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderMonthsPicker kalles Når den får en minDato som har lik måned som maxDato Så returnerer den visnign av bare den ene måneden - uten dropdown 1`] = `
<span
  className="datepicker__month-view"
>
  October
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderMonthsPicker kalles Når den får minDato i februar og MaxDato i november Så returnerer den en dropdown med riktig className 1`] = `
<select
  aria-label="Velg måned"
  className="datepicker__month-selector"
  onChange={[Function]}
  onKeyDown={[Function]}
  value={9}
>
  <option
    value={0}
  >
    January
  </option>
  <option
    value={1}
  >
    February
  </option>
  <option
    value={2}
  >
    March
  </option>
  <option
    value={3}
  >
    April
  </option>
  <option
    value={4}
  >
    May
  </option>
  <option
    value={5}
  >
    June
  </option>
  <option
    value={6}
  >
    July
  </option>
  <option
    value={7}
  >
    August
  </option>
  <option
    value={8}
  >
    September
  </option>
  <option
    value={9}
  >
    October
  </option>
  <option
    value={10}
  >
    November
  </option>
  <option
    value={11}
  >
    December
  </option>
</select>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderYearsPicker kalles Når den får en minDato som har lik år som maxDato Så returnerer den visning av bare det ene året - uten dropdown 1`] = `
<span
  className="datepicker__year-view"
>
  2020
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderYearsPicker kalles Når den får minDato i 2010 og MaxDato i 2020 Så returnerer den en dropdown med riktig className 1`] = `
<select
  aria-label="Velg år"
  className="datepicker__year-selector"
  onChange={[Function]}
  onKeyDown={[Function]}
  value={2015}
>
  <option
    value={2010}
  >
    2010
  </option>
  <option
    value={2011}
  >
    2011
  </option>
  <option
    value={2012}
  >
    2012
  </option>
  <option
    value={2013}
  >
    2013
  </option>
  <option
    value={2014}
  >
    2014
  </option>
  <option
    value={2015}
  >
    2015
  </option>
  <option
    value={2016}
  >
    2016
  </option>
  <option
    value={2017}
  >
    2017
  </option>
  <option
    value={2018}
  >
    2018
  </option>
  <option
    value={2019}
  >
    2019
  </option>
  <option
    value={2020}
  >
    2020
  </option>
</select>
`;
